Finished info content, got boxes to align and wrap correctly. Added quote content, still need to fix when it shrinks

--- a/style.css
+++ b/style.css
@@ -12,8 +12,6 @@ html, body {
 .page{
     display:flex;
     flex-direction: column;
-    width: 100%;
-    height: 100%;
 }
 
 .header{
@@ -86,10 +84,78 @@ html, body {
 .info-content {
     flex:1;
     background-color: #F9FAF8;
+    display:flex;
+    flex-direction:column;
+    align-items: center;
 }
 
+.info {
+    font-size: 3em;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    margin-bottom: 1em;
+}
+.images {
+    height:70%;
+    width:70%;
+    padding:0;
+    margin: 0 0 10em 0;
+}
+.images ul{
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    max-width: 100%;
+    list-style: none;
+    padding:0;
+    margin:0;
+    gap:1em;
+}
+
+.images li{
+    flex: 1 1 1;
+    width:300px;
+    text-align: center;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: large;
+    margin-top:1em;
+
+}
+
+.items img {
+    max-height:100%;
+}
+
+
+
+.quote-content {
+    flex:1,1,1;
+    background-color: #E5E7EB;
+    display:flex;
+    flex-direction:column;
+    justify-content: center;
+    align-items: center;
+    width:100%;
+    padding: 5em 0 5em 0;
+}
+
+.quote-content p {
+    align-self:center;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: larger;
+    width:60%;
+    margin-left: 20em;
+    
+}
+
+.quote-content strong {
+    align-self: flex-end;
+    margin-right: 50em
+}
+
+
 img { 
-    width: 50%; 
+    width: 100%; 
+    height:100%;
     align-self: center;
     justify-self:  center;
 }
